--- a/lms/templates/register-form.html
+++ b/lms/templates/register-form.html
@@ -176,6 +176,19 @@ from student.models import UserProfile
       </div>
     </li>
     % endif
+    % if settings.REGISTRATION_EXTRA_FIELDS['ethnicity'] != 'hidden':
+    <li class="field-group field-ethnicity">
+    <div class="field ${settings.REGISTRATION_EXTRA_FIELDS['ethnicity']} select" id="field-ethnicity">
+        <label for="ethnicity">${_("Ethnicity")}</label>
+        <select id="ethnicity" name="ethnicity" ${'required aria-required="true"' if settings.REGISTRATION_EXTRA_FIELDS['ethnicity'] == 'required' else ''}>
+          <option value="">--</option>
+          %for code, ethnicity_level in UserProfile.ETHNIC_GROUPS_CHOICES:
+          <option value="${code}">${_(ethnicity_level)}</option>
+          %endfor
+        </select>
+      </div>
+    </li>
+    % endif
     % if settings.REGISTRATION_EXTRA_FIELDS['level_of_education'] != 'hidden':
     <li class="field-group field-education-level">
     <div class="field ${settings.REGISTRATION_EXTRA_FIELDS['level_of_education']} select" id="field-education-level">
